# backup_to_harddrive

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release.yaml  ubuntu_24_validation.yaml
backup_to_harddrive/: LICENSE  README.md  USECASES.md  pyproject.toml
backup_to_harddrive/src/backup_to_harddrive/: backup.py  backup_from_config.py  backup_status.py  config.py  main.py  rsync_installation_check.py
backup_to_harddrive/src/backup_to_harddrive/quick_restore_scripts/: restore_development.sh  restore_documents.sh  restore_music.sh  restore_templates.sh  restore_video.sh
backup_to_harddrive/tests/: test_backup.py  test_backup_from_config.py  test_backup_status.py  test_config.py  test_main.py  test_rsync_installation_check.py
backup_to_harddrive/validation/: usecase_6_test_list.txt
badges/: create-badges.sh
processes/: create_new_release.sh
