[build-system]
requires = ["poetry==1.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "backup_to_harddrive"
version = "0.0.2"
description = "Backup home files to Harddrive on Linux"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10,<4.0"

[project.urls]
homepage = "https://github.com/renn0xtek9/backup_to_harddrive"

[tool.poetry]
name = "backup_to_harddrive"
version = "0.0.2"
description = "Backup home files to Harddrive on Linux"
readme = "README.md"
authors = ["Maxime Haselbauer <maxime.haselbauer@googlemail.com>"]

[tool.poetry.dependencies]
PyYAML = "6.0.2"

[tool.poetry.group.dev.dependencies]
pytest="^8.2.2"
pytest-cov="^5.0.0"
pylint="^3.2.6"
mypy="^1.15.0"
flake8="^7.1.2"
tryceratops="^2.4.1"
parameterized="0.9.0"

[tool.poetry.scripts]
backup_to_harddrive = "backup_to_harddrive.main:main"

[tool.pylint]
jobs=0
load-plugins="pylint.extensions.docparams"
fail-under=10.0
[tool.pylint.messages_control]
disable=[]
[tool.pylint.format]
max-line-length=120
max-args=10
no-docstring-rgx="(test_.*|Test.*|test.*)"
good-names=""

[tool.pylint.reports]
output-format="colorized"
score="yes"

[tool.pylint.similarities]
ignore-comments="no"
ignore-docstrings="no"
ignore-imports="no"
ignore-signatures="no"
min-similarity-lines=5

[tool.coverage.run]
omit=["*/.local/*","/usr/*",".eggs/*","/opt/*"]

[tool.coverage.report]
exclude_lines=["pragma: no cover"]
fail_under=100

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
